// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MarkdownMedia render should render an iframe with the correct video id 1`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <Component>
    <MarkdownMedia
      config="(https://www.vimeo.com/253530307, {\\"timelinks\\": {\\"02:10\\": \\"A rude awakening\\", \\"05:30\\": \\"Finally, you are up!\\"}})"
    >
      <div
        className="video-container "
      >
        <div>
          <ReactPlayer
            className="react-player"
            config={
              Object {
                "dailymotion": Object {
                  "params": Object {
                    "api": 1,
                    "endscreen-enable": false,
                  },
                },
                "facebook": Object {
                  "appId": "1309697205772819",
                  "attributes": Object {},
                  "playerId": null,
                  "version": "v3.3",
                },
                "file": Object {
                  "attributes": Object {},
                  "dashVersion": "3.1.3",
                  "flvVersion": "1.5.0",
                  "forceAudio": false,
                  "forceDASH": false,
                  "forceFLV": false,
                  "forceHLS": false,
                  "forceVideo": false,
                  "hlsOptions": Object {},
                  "hlsVersion": "1.1.4",
                  "tracks": Array [],
                },
                "mixcloud": Object {
                  "options": Object {
                    "hide_cover": 1,
                  },
                },
                "soundcloud": Object {
                  "options": Object {
                    "buying": false,
                    "download": false,
                    "liking": false,
                    "sharing": false,
                    "show_comments": false,
                    "show_playcount": false,
                    "visual": true,
                  },
                },
                "twitch": Object {
                  "options": Object {},
                  "playerId": null,
                },
                "vidyard": Object {
                  "options": Object {},
                },
                "vimeo": Object {
                  "playerOptions": Object {
                    "autopause": false,
                    "byline": false,
                    "portrait": false,
                    "title": false,
                  },
                  "title": null,
                },
                "wistia": Object {
                  "customControls": null,
                  "options": Object {},
                  "playerId": null,
                },
                "youtube": Object {
                  "embedOptions": Object {},
                  "onUnstarted": [Function],
                  "playerVars": Object {
                    "iv_load_policy": 3,
                    "modestbranding": 1,
                    "playsinline": 1,
                    "rel": 0,
                    "showinfo": 0,
                  },
                },
              }
            }
            controls={true}
            fallback={null}
            height="360px"
            light={false}
            loop={false}
            muted={false}
            oEmbedUrl="https://noembed.com/embed?url={url}"
            onBuffer={[Function]}
            onBufferEnd={[Function]}
            onClickPreview={[Function]}
            onDisablePIP={[Function]}
            onDuration={[Function]}
            onEnablePIP={[Function]}
            onEnded={[Function]}
            onError={[Function]}
            onPause={[Function]}
            onPlay={[Function]}
            onPlaybackRateChange={[Function]}
            onProgress={[Function]}
            onReady={[Function]}
            onSeek={[Function]}
            onStart={[Function]}
            pip={false}
            playbackRate={1}
            playing={false}
            playsinline={false}
            previewTabIndex={0}
            progressInterval={1000}
            stopOnUnmount={true}
            style={Object {}}
            url="https://www.vimeo.com/253530307"
            volume={null}
            width="100%"
            wrapper="div"
          >
            <div
              className="react-player"
              style={
                Object {
                  "height": "360px",
                  "width": "100%",
                }
              }
            >
              <Suspense
                fallback={null}
              />
            </div>
          </ReactPlayer>
        </div>
        <div>
          <div
            className="timelink"
            key="02:100"
            title="A rude awakening"
          >
            <b
              className="timelink-icon"
              onClick={[Function]}
            >
              <Connect(Icon)
                icon="play"
              >
                <Icon
                  directionAware={false}
                  icon="play"
                  locale=""
                >
                  <FontAwesomeIcon
                    beat={false}
                    beatFade={false}
                    border={false}
                    bounce={false}
                    className=""
                    fade={false}
                    fixedWidth={false}
                    flip={null}
                    icon="play"
                    inverse={false}
                    listItem={false}
                    mask={null}
                    maskId={null}
                    pull={null}
                    pulse={false}
                    rotation={null}
                    shake={false}
                    size={null}
                    spin={false}
                    spinPulse={false}
                    spinReverse={false}
                    swapOpacity={false}
                    symbol={false}
                    title=""
                    titleId={null}
                    transform={null}
                  >
                    <svg
                      aria-hidden="true"
                      className="svg-inline--fa fa-play fa-w-14 "
                      data-icon="play"
                      data-prefix="fas"
                      focusable="false"
                      role="img"
                      style={Object {}}
                      viewBox="0 0 448 512"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M424.4 214.7L72.4 6.6C43.8-10.3 0 6.1 0 47.9V464c0 37.5 40.7 60.1 72.4 41.3l352-208c31.4-18.5 31.5-64.1 0-82.6z"
                        fill="currentColor"
                        style={Object {}}
                      />
                    </svg>
                  </FontAwesomeIcon>
                </Icon>
              </Connect(Icon)>
            </b>
            <div
              className="timelink-time-label"
              onClick={[Function]}
            >
              <b>
                00:02:10
              </b>
              <span>
                A rude awakening
              </span>
            </div>
          </div>
          <div
            className="timelink"
            key="05:301"
            title="Finally, you are up!"
          >
            <b
              className="timelink-icon"
              onClick={[Function]}
            >
              <Connect(Icon)
                icon="play"
              >
                <Icon
                  directionAware={false}
                  icon="play"
                  locale=""
                >
                  <FontAwesomeIcon
                    beat={false}
                    beatFade={false}
                    border={false}
                    bounce={false}
                    className=""
                    fade={false}
                    fixedWidth={false}
                    flip={null}
                    icon="play"
                    inverse={false}
                    listItem={false}
                    mask={null}
                    maskId={null}
                    pull={null}
                    pulse={false}
                    rotation={null}
                    shake={false}
                    size={null}
                    spin={false}
                    spinPulse={false}
                    spinReverse={false}
                    swapOpacity={false}
                    symbol={false}
                    title=""
                    titleId={null}
                    transform={null}
                  >
                    <svg
                      aria-hidden="true"
                      className="svg-inline--fa fa-play fa-w-14 "
                      data-icon="play"
                      data-prefix="fas"
                      focusable="false"
                      role="img"
                      style={Object {}}
                      viewBox="0 0 448 512"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M424.4 214.7L72.4 6.6C43.8-10.3 0 6.1 0 47.9V464c0 37.5 40.7 60.1 72.4 41.3l352-208c31.4-18.5 31.5-64.1 0-82.6z"
                        fill="currentColor"
                        style={Object {}}
                      />
                    </svg>
                  </FontAwesomeIcon>
                </Icon>
              </Connect(Icon)>
            </b>
            <div
              className="timelink-time-label"
              onClick={[Function]}
            >
              <b>
                00:05:30
              </b>
              <span>
                Finally, you are up!
              </span>
            </div>
          </div>
        </div>
        <p
          className="print-view-alt"
        >
          https://www.vimeo.com/253530307
        </p>
      </div>
    </MarkdownMedia>
  </Component>
</Provider>
`;

exports[`MarkdownMedia render should use compact class name if compact prop is set 1`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <Component>
    <MarkdownMedia
      compact={true}
      config="(https://www.vimeo.com/253530307, {\\"timelinks\\": {\\"02:10\\": \\"A rude awakening\\", \\"05:30\\": \\"Finally, you are up!\\"}})"
    >
      <div
        className="video-container compact"
      >
        <div>
          <ReactPlayer
            className="react-player"
            config={
              Object {
                "dailymotion": Object {
                  "params": Object {
                    "api": 1,
                    "endscreen-enable": false,
                  },
                },
                "facebook": Object {
                  "appId": "1309697205772819",
                  "attributes": Object {},
                  "playerId": null,
                  "version": "v3.3",
                },
                "file": Object {
                  "attributes": Object {},
                  "dashVersion": "3.1.3",
                  "flvVersion": "1.5.0",
                  "forceAudio": false,
                  "forceDASH": false,
                  "forceFLV": false,
                  "forceHLS": false,
                  "forceVideo": false,
                  "hlsOptions": Object {},
                  "hlsVersion": "1.1.4",
                  "tracks": Array [],
                },
                "mixcloud": Object {
                  "options": Object {
                    "hide_cover": 1,
                  },
                },
                "soundcloud": Object {
                  "options": Object {
                    "buying": false,
                    "download": false,
                    "liking": false,
                    "sharing": false,
                    "show_comments": false,
                    "show_playcount": false,
                    "visual": true,
                  },
                },
                "twitch": Object {
                  "options": Object {},
                  "playerId": null,
                },
                "vidyard": Object {
                  "options": Object {},
                },
                "vimeo": Object {
                  "playerOptions": Object {
                    "autopause": false,
                    "byline": false,
                    "portrait": false,
                    "title": false,
                  },
                  "title": null,
                },
                "wistia": Object {
                  "customControls": null,
                  "options": Object {},
                  "playerId": null,
                },
                "youtube": Object {
                  "embedOptions": Object {},
                  "onUnstarted": [Function],
                  "playerVars": Object {
                    "iv_load_policy": 3,
                    "modestbranding": 1,
                    "playsinline": 1,
                    "rel": 0,
                    "showinfo": 0,
                  },
                },
              }
            }
            controls={true}
            fallback={null}
            height="100%"
            light={false}
            loop={false}
            muted={false}
            oEmbedUrl="https://noembed.com/embed?url={url}"
            onBuffer={[Function]}
            onBufferEnd={[Function]}
            onClickPreview={[Function]}
            onDisablePIP={[Function]}
            onDuration={[Function]}
            onEnablePIP={[Function]}
            onEnded={[Function]}
            onError={[Function]}
            onPause={[Function]}
            onPlay={[Function]}
            onPlaybackRateChange={[Function]}
            onProgress={[Function]}
            onReady={[Function]}
            onSeek={[Function]}
            onStart={[Function]}
            pip={false}
            playbackRate={1}
            playing={false}
            playsinline={false}
            previewTabIndex={0}
            progressInterval={1000}
            stopOnUnmount={true}
            style={Object {}}
            url="https://www.vimeo.com/253530307"
            volume={null}
            width="100%"
            wrapper="div"
          >
            <div
              className="react-player"
              style={
                Object {
                  "height": "100%",
                  "width": "100%",
                }
              }
            >
              <Suspense
                fallback={null}
              >
                <Player
                  activePlayer={
                    Object {
                      "$$typeof": Symbol(react.lazy),
                      "_init": [Function],
                      "_payload": Object {
                        "_result": Object {
                          "default": [Function],
                        },
                        "_status": 1,
                      },
                    }
                  }
                  className="react-player"
                  config={
                    Object {
                      "dailymotion": Object {
                        "params": Object {
                          "api": 1,
                          "endscreen-enable": false,
                        },
                      },
                      "facebook": Object {
                        "appId": "1309697205772819",
                        "attributes": Object {},
                        "playerId": null,
                        "version": "v3.3",
                      },
                      "file": Object {
                        "attributes": Object {},
                        "dashVersion": "3.1.3",
                        "flvVersion": "1.5.0",
                        "forceAudio": false,
                        "forceDASH": false,
                        "forceFLV": false,
                        "forceHLS": false,
                        "forceVideo": false,
                        "hlsOptions": Object {},
                        "hlsVersion": "1.1.4",
                        "tracks": Array [],
                      },
                      "mixcloud": Object {
                        "options": Object {
                          "hide_cover": 1,
                        },
                      },
                      "playerOptions": Object {
                        "autopause": false,
                        "byline": false,
                        "portrait": false,
                        "title": false,
                      },
                      "soundcloud": Object {
                        "options": Object {
                          "buying": false,
                          "download": false,
                          "liking": false,
                          "sharing": false,
                          "show_comments": false,
                          "show_playcount": false,
                          "visual": true,
                        },
                      },
                      "title": null,
                      "twitch": Object {
                        "options": Object {},
                        "playerId": null,
                      },
                      "vidyard": Object {
                        "options": Object {},
                      },
                      "vimeo": Object {
                        "playerOptions": Object {
                          "autopause": false,
                          "byline": false,
                          "portrait": false,
                          "title": false,
                        },
                        "title": null,
                      },
                      "wistia": Object {
                        "customControls": null,
                        "options": Object {},
                        "playerId": null,
                      },
                      "youtube": Object {
                        "embedOptions": Object {},
                        "onUnstarted": [Function],
                        "playerVars": Object {
                          "iv_load_policy": 3,
                          "modestbranding": 1,
                          "playsinline": 1,
                          "rel": 0,
                          "showinfo": 0,
                        },
                      },
                    }
                  }
                  controls={true}
                  fallback={null}
                  height="100%"
                  key="vimeo"
                  light={false}
                  loop={false}
                  muted={false}
                  oEmbedUrl="https://noembed.com/embed?url={url}"
                  onBuffer={[Function]}
                  onBufferEnd={[Function]}
                  onClickPreview={[Function]}
                  onDisablePIP={[Function]}
                  onDuration={[Function]}
                  onEnablePIP={[Function]}
                  onEnded={[Function]}
                  onError={[Function]}
                  onPause={[Function]}
                  onPlay={[Function]}
                  onPlaybackRateChange={[Function]}
                  onProgress={[Function]}
                  onReady={[Function]}
                  onSeek={[Function]}
                  onStart={[Function]}
                  pip={false}
                  playbackRate={1}
                  playing={false}
                  playsinline={false}
                  previewTabIndex={0}
                  progressInterval={1000}
                  stopOnUnmount={true}
                  style={Object {}}
                  url="https://www.vimeo.com/253530307"
                  volume={null}
                  width="100%"
                  wrapper="div"
                >
                  <Vimeo
                    activePlayer={
                      Object {
                        "$$typeof": Symbol(react.lazy),
                        "_init": [Function],
                        "_payload": Object {
                          "_result": Object {
                            "default": [Function],
                          },
                          "_status": 1,
                        },
                      }
                    }
                    className="react-player"
                    config={
                      Object {
                        "dailymotion": Object {
                          "params": Object {
                            "api": 1,
                            "endscreen-enable": false,
                          },
                        },
                        "facebook": Object {
                          "appId": "1309697205772819",
                          "attributes": Object {},
                          "playerId": null,
                          "version": "v3.3",
                        },
                        "file": Object {
                          "attributes": Object {},
                          "dashVersion": "3.1.3",
                          "flvVersion": "1.5.0",
                          "forceAudio": false,
                          "forceDASH": false,
                          "forceFLV": false,
                          "forceHLS": false,
                          "forceVideo": false,
                          "hlsOptions": Object {},
                          "hlsVersion": "1.1.4",
                          "tracks": Array [],
                        },
                        "mixcloud": Object {
                          "options": Object {
                            "hide_cover": 1,
                          },
                        },
                        "playerOptions": Object {
                          "autopause": false,
                          "byline": false,
                          "portrait": false,
                          "title": false,
                        },
                        "soundcloud": Object {
                          "options": Object {
                            "buying": false,
                            "download": false,
                            "liking": false,
                            "sharing": false,
                            "show_comments": false,
                            "show_playcount": false,
                            "visual": true,
                          },
                        },
                        "title": null,
                        "twitch": Object {
                          "options": Object {},
                          "playerId": null,
                        },
                        "vidyard": Object {
                          "options": Object {},
                        },
                        "vimeo": Object {
                          "playerOptions": Object {
                            "autopause": false,
                            "byline": false,
                            "portrait": false,
                            "title": false,
                          },
                          "title": null,
                        },
                        "wistia": Object {
                          "customControls": null,
                          "options": Object {},
                          "playerId": null,
                        },
                        "youtube": Object {
                          "embedOptions": Object {},
                          "onUnstarted": [Function],
                          "playerVars": Object {
                            "iv_load_policy": 3,
                            "modestbranding": 1,
                            "playsinline": 1,
                            "rel": 0,
                            "showinfo": 0,
                          },
                        },
                      }
                    }
                    controls={true}
                    fallback={null}
                    height="100%"
                    light={false}
                    loop={false}
                    muted={false}
                    oEmbedUrl="https://noembed.com/embed?url={url}"
                    onBuffer={[Function]}
                    onBufferEnd={[Function]}
                    onClickPreview={[Function]}
                    onDisablePIP={[Function]}
                    onDuration={[Function]}
                    onEnablePIP={[Function]}
                    onEnded={[Function]}
                    onError={[Function]}
                    onLoaded={[Function]}
                    onMount={[Function]}
                    onPause={[Function]}
                    onPlay={[Function]}
                    onPlaybackRateChange={[Function]}
                    onProgress={[Function]}
                    onReady={[Function]}
                    onSeek={[Function]}
                    onStart={[Function]}
                    pip={false}
                    playbackRate={1}
                    playing={false}
                    playsinline={false}
                    previewTabIndex={0}
                    progressInterval={1000}
                    stopOnUnmount={true}
                    style={Object {}}
                    url="https://www.vimeo.com/253530307"
                    volume={null}
                    width="100%"
                    wrapper="div"
                  >
                    <div
                      key="https://www.vimeo.com/253530307"
                      style={
                        Object {
                          "display": undefined,
                          "height": "100%",
                          "overflow": "hidden",
                          "width": "100%",
                        }
                      }
                    />
                  </Vimeo>
                </Player>
              </Suspense>
            </div>
          </ReactPlayer>
        </div>
        <div>
          <div
            className="timelink"
            key="02:100"
            title="A rude awakening"
          >
            <b
              className="timelink-icon"
              onClick={[Function]}
            >
              <Connect(Icon)
                icon="play"
              >
                <Icon
                  directionAware={false}
                  icon="play"
                  locale=""
                >
                  <FontAwesomeIcon
                    beat={false}
                    beatFade={false}
                    border={false}
                    bounce={false}
                    className=""
                    fade={false}
                    fixedWidth={false}
                    flip={null}
                    icon="play"
                    inverse={false}
                    listItem={false}
                    mask={null}
                    maskId={null}
                    pull={null}
                    pulse={false}
                    rotation={null}
                    shake={false}
                    size={null}
                    spin={false}
                    spinPulse={false}
                    spinReverse={false}
                    swapOpacity={false}
                    symbol={false}
                    title=""
                    titleId={null}
                    transform={null}
                  >
                    <svg
                      aria-hidden="true"
                      className="svg-inline--fa fa-play fa-w-14 "
                      data-icon="play"
                      data-prefix="fas"
                      focusable="false"
                      role="img"
                      style={Object {}}
                      viewBox="0 0 448 512"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M424.4 214.7L72.4 6.6C43.8-10.3 0 6.1 0 47.9V464c0 37.5 40.7 60.1 72.4 41.3l352-208c31.4-18.5 31.5-64.1 0-82.6z"
                        fill="currentColor"
                        style={Object {}}
                      />
                    </svg>
                  </FontAwesomeIcon>
                </Icon>
              </Connect(Icon)>
            </b>
            <div
              className="timelink-time-label"
              onClick={[Function]}
            >
              <b>
                00:02:10
              </b>
              <span>
                A rude awakening
              </span>
            </div>
          </div>
          <div
            className="timelink"
            key="05:301"
            title="Finally, you are up!"
          >
            <b
              className="timelink-icon"
              onClick={[Function]}
            >
              <Connect(Icon)
                icon="play"
              >
                <Icon
                  directionAware={false}
                  icon="play"
                  locale=""
                >
                  <FontAwesomeIcon
                    beat={false}
                    beatFade={false}
                    border={false}
                    bounce={false}
                    className=""
                    fade={false}
                    fixedWidth={false}
                    flip={null}
                    icon="play"
                    inverse={false}
                    listItem={false}
                    mask={null}
                    maskId={null}
                    pull={null}
                    pulse={false}
                    rotation={null}
                    shake={false}
                    size={null}
                    spin={false}
                    spinPulse={false}
                    spinReverse={false}
                    swapOpacity={false}
                    symbol={false}
                    title=""
                    titleId={null}
                    transform={null}
                  >
                    <svg
                      aria-hidden="true"
                      className="svg-inline--fa fa-play fa-w-14 "
                      data-icon="play"
                      data-prefix="fas"
                      focusable="false"
                      role="img"
                      style={Object {}}
                      viewBox="0 0 448 512"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M424.4 214.7L72.4 6.6C43.8-10.3 0 6.1 0 47.9V464c0 37.5 40.7 60.1 72.4 41.3l352-208c31.4-18.5 31.5-64.1 0-82.6z"
                        fill="currentColor"
                        style={Object {}}
                      />
                    </svg>
                  </FontAwesomeIcon>
                </Icon>
              </Connect(Icon)>
            </b>
            <div
              className="timelink-time-label"
              onClick={[Function]}
            >
              <b>
                00:05:30
              </b>
              <span>
                Finally, you are up!
              </span>
            </div>
          </div>
        </div>
        <p
          className="print-view-alt"
        >
          https://www.vimeo.com/253530307
        </p>
      </div>
    </MarkdownMedia>
  </Component>
</Provider>
`;
